// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "900",
        "includeFontPadding": false,
        "lineHeight": 27,
        "marginBottom": 5,
      }
    }
  >
    Test Headline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      }
    }
  >
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`2. article summary content component with the given style 1`] = `
<Text
  style={
    Object {
      "color": "#696969",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 14,
      "lineHeight": 20,
      "marginBottom": 0,
    }
  }
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;

exports[`3. article summary content component with white space height and lineheight 1`] = `
<Text
  numberOfLines={4}
  style={
    Object {
      "color": "#696969",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 14,
      "lineHeight": 30,
      "marginBottom": 0,
    }
  }
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;

exports[`4. article summary content component without white space height 1`] = `
<Text
  numberOfLines={2}
  style={
    Object {
      "color": "#696969",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 14,
      "lineHeight": 20,
      "marginBottom": 0,
    }
  }
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;
